Fixed styling issue with H1 and reset button wrapping on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -82,6 +82,13 @@ body {
   h1 {
     text-transform: uppercase;
     color: #40C0CB;
+
+    @media screen and (max-width: 420px) {
+      font-size: 30px;
+    }
+    @media screen and (max-width: 360px) {
+      font-size: 20px;
+    }
   }
   p + h4 {
     margin-top: 28px;
